--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -19,13 +19,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Generate Context
-        id: context
+        id: context-contributions
         shell: bash
         run: |
-          MY_CONTRIBUTIONS_URL="https://api.github.com/search/issues?q=is:pr+is:merged+merged:%3E2018-10-01+author:airtonix+is:public+-user:airtonix&sort=merged"
-          contributions="$( curl -s $MY_CONTRIBUTIONS_URL | jq -r '.items' -s -c )"
-
+          contributions=$(./get-contributions.sh $GITHUB_REPOSITORY_OWNER)
           # echo output into step called contributions
           echo "contributions=$contributions" >> $GITHUB_OUTPUT
 
@@ -34,7 +36,10 @@ jobs:
         id: render-template
         with:
           template: README.tmpl.md
-          inputs: ${{ steps.context.outputs.inputs }}
+          inputs: |
+            {
+              "contributions": ${{ steps.context-contributions.outputs.contributions }}
+            }
 
       - name: Write to file
         shell: bash
